--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postuninstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "aplayer": "^1.10.1",
     "axios": "^0.18.0",
     "element-ui": "^2.6.1",
     "vue": "^2.6.6",
