--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aplayer": "^1.10.1",
     "axios": "^0.18.0",
     "element-ui": "^2.6.1",
+    "iscroll": "^5.2.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2"
   },
